feat: add iphones slider markup, features content & its markup

--- a/singolo1.html
+++ b/singolo1.html
@@ -23,7 +23,136 @@
           </ul>
         </nav>
       </header>
-      <main class="main"></main>
+      <main class="main">
+        <div class="iphones">
+          <img
+            src="assets/chev-left.png"
+            alt="switch-left"
+            width="16"
+            height="27"
+          />
+          <img src="assets/iphone-vertical.png" alt="iPhone Vertical" />
+          <img src="assets/iphone-horizontal.png" alt="iPhone Vertical" />
+          <img
+            src="assets/chev-right.png"
+            alt="switch-left"
+            width="16"
+            height="27"
+          />
+        </div>
+        <div class="main-container">
+          <h1>Our Services</h1>
+          <p class="description">
+            Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
+            Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget
+            lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+            tortor mauris condimentum nibh.
+          </p>
+          <ul class="features">
+            <li class="features-item">
+              <img
+                class="features-item_icon"
+                src="assets/pen.png"
+                alt="pen"
+                width="61"
+                height="61"
+              />
+              <div>
+                <h2 class="features-item_head">Custom Design</h2>
+                <p class="features-item_description">
+                  Curabitur vestibulum eget mauris quis laoreet. Phasellus in
+                  quam laoreet, viverra lacus ut, ultrices velit.
+                </p>
+              </div>
+            </li>
+
+            <li class="features-item">
+              <img
+                class="features-item_icon"
+                src="assets/bulb.png"
+                alt="bulb"
+                width="61"
+                height="61"
+              />
+              <div>
+                <h2 class="features-item_head">Inovative Ideas</h2>
+                <p class="features-item_description">
+                  Quisque luctus, quam eget molestie commodo, lacus purus cursus
+                  purus, nec rutrum tellus dolor id lorem.
+                </p>
+              </div>
+            </li>
+
+            <li class="features-item">
+              <img
+                class="features-item_icon"
+                src="assets/heart.png"
+                alt="heart"
+                width="61"
+                height="61"
+              />
+              <div>
+                <h2 class="features-item_head">Love Is The Answer</h2>
+                <p class="features-item_description">
+                  Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet
+                  turpis, et consequat felis. Quisque condimentum.
+                </p>
+              </div>
+            </li>
+
+            <li class="features-item">
+              <img
+                class="features-item_icon"
+                src="assets/phone.png"
+                alt="phone"
+                width="61"
+                height="61"
+              />
+              <div>
+                <h2 class="features-item_head">Responsive Layout</h2>
+                <p class="features-item_description">
+                  Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas
+                  blandit nunc ligula. Praesent elit leo.
+                </p>
+              </div>
+            </li>
+
+            <li class="features-item">
+              <img
+                class="features-item_icon"
+                src="assets/bubble.png"
+                alt="bubble"
+                width="61"
+                height="61"
+              />
+              <div>
+                <h2 class="features-item_head">24 / 7 Support</h2>
+                <p class="features-item_description">
+                  Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi.
+                  Nulla a sem erat. Pellentesque egestas venenatis lorem .
+                </p>
+              </div>
+            </li>
+
+            <li class="features-item">
+              <img
+                class="features-item_icon"
+                src="assets/star.png"
+                alt="star"
+                width="61"
+                height="61"
+              />
+              <div>
+                <h2 class="features-item_head">Feel Like A Star</h2>
+                <p class="features-item_description">
+                  VQuisque hendrerit purus dapibus, ornare nibh vitae, viverra
+                  nibh. Fusce vitae aliquam tellus.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </main>
     </div>
   </body>
 </html>
