fix: use PixelPerfect for more accurasy layout markup

--- a/singolo1.html
+++ b/singolo1.html
@@ -26,14 +26,24 @@
       <main class="main">
         <div class="iphones">
           <img
+            class="iphones__chev iphones__chev-left"
             src="assets/chev-left.png"
             alt="switch-left"
             width="16"
             height="27"
           />
-          <img src="assets/iphone-vertical.png" alt="iPhone Vertical" />
-          <img src="assets/iphone-horizontal.png" alt="iPhone Vertical" />
           <img
+            class="iphones__phone-1"
+            src="assets/iphone-vertical.png"
+            alt="iPhone Vertical"
+          />
+          <img
+            class="iphones__phone-2"
+            src="assets/iphone-horizontal.png"
+            alt="iPhone Vertical"
+          />
+          <img
+            class="iphones__chev iphones__chev-right"
             src="assets/chev-right.png"
             alt="switch-left"
             width="16"
@@ -77,8 +87,8 @@
               <div>
                 <h2 class="features-item_head">Inovative Ideas</h2>
                 <p class="features-item_description">
-                  Quisque luctus, quam eget molestie commodo, lacus purus cursus
-                  purus, nec rutrum tellus dolor id lorem.
+                  Quisque luctus, quam eget molestie com- modo, lacus purus
+                  cursus purus, nec rutrum tellus dolor id lorem.
                 </p>
               </div>
             </li>
@@ -112,7 +122,7 @@
                 <h2 class="features-item_head">Responsive Layout</h2>
                 <p class="features-item_description">
                   Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas
-                  blandit nunc ligula. Praesent elit leo.
+                  blandit nunc ligula. Prae- sent elit leo.
                 </p>
               </div>
             </li>
@@ -129,7 +139,7 @@
                 <h2 class="features-item_head">24 / 7 Support</h2>
                 <p class="features-item_description">
                   Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi.
-                  Nulla a sem erat. Pellentesque egestas venenatis lorem .
+                  Nulla a sem erat. Pellen- tesque egestas venenatis lorem .
                 </p>
               </div>
             </li>
@@ -145,7 +155,7 @@
               <div>
                 <h2 class="features-item_head">Feel Like A Star</h2>
                 <p class="features-item_description">
-                  VQuisque hendrerit purus dapibus, ornare nibh vitae, viverra
+                  Quisque hendrerit purus dapibus, ornare nibh vitae, viverra
                   nibh. Fusce vitae aliquam tellus.
                 </p>
               </div>
