feat: add interact for links in portfolio section and for social media buttons in 'About Us' section

--- a/singolo2.html
+++ b/singolo2.html
@@ -12,10 +12,10 @@
       <h2 class="portfolio__header">Portfolio</h2>
       <p class="portfolio__description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
       <ul class="portfolio__tags">
-        <li class="portfolio__tags-item portfolio__tags-item_selected">All</li>
-        <li class="portfolio__tags-item">Web Design</li>
-        <li class="portfolio__tags-item">Graphic Design</li>
-        <li class="portfolio__tags-item">Artwork</li>
+        <li class="portfolio__tags-item portfolio__tags-item_selected"><a href="#all">All</a></li>
+        <li class="portfolio__tags-item"><a href="#wd">Web Design</a></li>
+        <li class="portfolio__tags-item"><a href="#gd">Graphic Design</a></li>
+        <li class="portfolio__tags-item"><a href="#aw">Artwork</a></li>
       </ul>
       <ul class="portfolio-galery">
         <li class="portfolio-galery__item">
