--- a/singolo3.html
+++ b/singolo3.html
@@ -11,52 +11,25 @@
     <section class="get-a-quote container">
       <h2 class="get-a-quote__header">Get a Quote</h2>
       <p class="get-a-quote__description">
-        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis
-        mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia
-        odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor
-        mauris condimentum nibh.
+        Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia
+        odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.
       </p>
       <div class="get-a-quote__content">
         <form action="#" class="get-a-quote__form">
           <label for="id" class="visually-hidden">Name</label>
-          <input
-            type="text"
-            name="name"
-            id="name"
-            placeholder="Name (Required)"
-          />
+          <input type="text" name="name" id="name" placeholder="Name (Required)" />
           <label for="email" class="visually-hidden">Email</label>
-          <input
-            type="text"
-            name="email"
-            id="email"
-            placeholder="Email (Required)"
-          />
+          <input type="text" name="email" id="email" placeholder="Email (Required)" />
           <label for="subject" class="visually-hidden"></label>
-          <input
-            type="text"
-            name="subject"
-            id="subject"
-            placeholder="Subject"
-          />
-          <label for="quote" class="visually-hidden"
-            >Describe you project in detail...</label
-          >
-          <textarea
-            name="quote"
-            id="quote"
-            cols="30"
-            rows="10"
-            placeholder="Describe you project in detail..."
-          ></textarea>
+          <input type="text" name="subject" id="subject" placeholder="Subject" />
+          <label for="quote" class="visually-hidden">Describe you project in detail...</label>
+          <textarea name="quote" id="quote" cols="30" rows="10" placeholder="Describe your project in detail..."></textarea>
         </form>
         <div class="contact-info">
           <h3 class="contact-info__header">Contact Information</h3>
           <p class="contact-info__description">
-            Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh.
-            Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla
-            sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
-            consequat felis.
+            Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed
+            nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
           </p>
           <ul class="contact-info__list">
             <li class="contact-info__list-item contact-info__list-item_addr">
@@ -72,5 +45,26 @@
         </div>
       </div>
     </section>
+    <div class="get-a-quote__footer container">
+      <div class="get-a-quote__footer-copyright">
+        &copy; Copyright 2013
+      </div>
+      <div>
+        <ul class="social-media">
+          <li class="social-media__item">
+            <a href="#"><img src="assets/ico-facebook.png" alt="facebook" width="34" height="35"/></a>
+          </li>
+          <li class="social-media__item">
+            <a href="#"><img src="assets/ico-google.png" alt="google" width="34" height="35"/></a>
+          </li>
+          <li class="social-media__item">
+            <a href="#"><img src="assets/ico-twitter.png" alt="twitter" width="34" height="35"/></a>
+          </li>
+          <li class="social-media__item">
+            <a href="#"><img src="assets/ico-linkedin.png" alt="linkedin" width="34" height="35"/></a>
+          </li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
