--- a/singolo3.html
+++ b/singolo3.html
@@ -17,9 +17,9 @@
       <div class="get-a-quote__content">
         <form action="#" class="get-a-quote__form">
           <label for="id" class="visually-hidden">Name</label>
-          <input type="text" name="name" id="name" placeholder="Name (Required)" />
+          <input type="text" name="name" id="name" placeholder="Name (Required)" required />
           <label for="email" class="visually-hidden">Email</label>
-          <input type="text" name="email" id="email" placeholder="Email (Required)" />
+          <input type="text" name="email" id="email" placeholder="Email (Required)" required />
           <label for="subject" class="visually-hidden"></label>
           <input type="text" name="subject" id="subject" placeholder="Subject" />
           <label for="quote" class="visually-hidden">Describe you project in detail...</label>
@@ -28,7 +28,7 @@
         <div class="contact-info">
           <h3 class="contact-info__header">Contact Information</h3>
           <p class="contact-info__description">
-            Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed
+            Quisque hendrerit purus dapibus, ornare nibh vitae, viver- ra nibh. Fusce vitae aliquam tellus. Proin sit amet volutpat libero. Nulla sed
             nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis.
           </p>
           <ul class="contact-info__list">
@@ -36,10 +36,10 @@
               Elm St. 14/05 Lost City
             </li>
             <li class="contact-info__list-item contact-info__list-item_phone">
-              03528 331 86 35
+              <a href="tel: +74951234567">03528 331 86 35</a>
             </li>
             <li class="contact-info__list-item contact-info__list-item_email">
-              info@singolo.com
+              <a href="mailto: info@singolo.com">info@singolo.com</a>
             </li>
           </ul>
         </div>
