fix: fix some goughness

--- a/singolo.html
+++ b/singolo.html
@@ -242,7 +242,7 @@
           <label for="id" class="visually-hidden">Name</label>
           <input type="text" name="name" id="name" placeholder="Name (Required)" required />
           <label for="email" class="visually-hidden">Email</label>
-          <input type="text" name="email" id="email" placeholder="Email (Required)" required />
+          <input type="email" name="email" id="email" placeholder="Email (Required)" required />
           <label for="subject" class="visually-hidden"></label>
           <input type="text" name="subject" id="subject" placeholder="Subject" />
           <label for="quote" class="visually-hidden">Describe you project in detail...</label>
